@@ -1,7 +1,6 @@
 .created
 .deps
 .depend
-.libs
 Makefile
 Makefile.in
 db_archive
@@ -18,6 +17,9 @@ db_upgrade
 db_verify
 tagtbl.c
 tjfn
+.libs
+*.gcda
+*.gcno
 *.la
 *.lcd
 *.lo
